[gd_scene load_steps=16 format=2]

[ext_resource path="res://GFX/acceuil.png" type="Texture" id=1]
[ext_resource path="res://GFX/form.png" type="Texture" id=2]
[ext_resource path="res://Bouton/bouton_retour_pressed.png" type="Texture" id=3]
[ext_resource path="res://Fonts/RELLIALE.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Bouton/bouton_connexion_normal.png" type="Texture" id=5]
[ext_resource path="res://Bouton/bouton_retour_normal.png" type="Texture" id=6]
[ext_resource path="res://Bouton/bouton_connexion_pressed.png" type="Texture" id=7]
[ext_resource path="res://Bouton/bouton_inscription_normal.png" type="Texture" id=8]
[ext_resource path="res://Bouton/bouton_inscription_pressed.png" type="Texture" id=9]
[ext_resource path="res://Scripts/Connexion.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 100
font_data = ExtResource( 4 )

[node name="connexion" type="Node2D"]
script = ExtResource( 10 )

[node name="background" type="TextureRect" parent="."]
margin_right = 3840.0
margin_bottom = 2160.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="formule" type="TextureRect" parent="."]
margin_left = 1170.0
margin_right = 2670.0
margin_bottom = 2165.0
rect_scale = Vector2( 1, 1.12 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="formule"]
margin_left = 171.465
margin_top = 105.074
margin_right = 1353.47
margin_bottom = 647.074
custom_fonts/font = SubResource( 1 )
text = "Connexion"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mail_label" type="Label" parent="formule"]
margin_left = 125.0
margin_top = 674.343
margin_right = 888.0
margin_bottom = 938.343
custom_fonts/font = SubResource( 2 )
text = "E-mail

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mdp_label" type="Label" parent="formule"]
margin_left = 125.0
margin_top = 930.538
margin_right = 888.0
margin_bottom = 1283.54
custom_fonts/font = SubResource( 2 )
text = "Mot de passe


"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mail" type="LineEdit" parent="formule"]
margin_left = 125.0
margin_top = 788.957
margin_right = 1375.0
margin_bottom = 858.957
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mdp" type="LineEdit" parent="formule"]
margin_left = 125.0
margin_top = 1065.38
margin_right = 1375.0
margin_bottom = 1135.38
custom_fonts/font = SubResource( 4 )
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inscription" type="TextureButton" parent="formule"]
margin_left = 800.0
margin_top = 1240.0
margin_right = 990.0
margin_bottom = 1300.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="connexion" type="TextureButton" parent="formule"]
margin_left = 130.0
margin_top = 1240.0
margin_right = 320.0
margin_bottom = 1300.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="retour" type="TextureButton" parent="formule"]
margin_left = 502.993
margin_top = 1520.93
margin_right = 692.993
margin_bottom = 1580.93
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="error" type="PopupDialog" parent="."]
margin_left = 1268.29
margin_top = 299.564
margin_right = 2555.29
margin_bottom = 1989.56
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="error"]
margin_left = 128.0
margin_top = 272.0
margin_right = 1235.0
margin_bottom = 1415.0
custom_fonts/normal_font = SubResource( 5 )
text = "Inscription échoué... 
Email ou mot de passe incorrecte"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="error"]
margin_left = 362.448
margin_top = 1344.08
margin_right = 552.448
margin_bottom = 1404.08
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="success" type="PopupDialog" parent="."]
margin_left = 1268.29
margin_top = 299.564
margin_right = 2555.29
margin_bottom = 1989.56
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="success"]
margin_left = 127.816
margin_top = 272.346
margin_right = 1234.82
margin_bottom = 1385.35
custom_fonts/normal_font = SubResource( 5 )
text = "Bonjour et bienvenue
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="retour_success" type="TextureButton" parent="success"]
margin_left = 362.448
margin_top = 1344.08
margin_right = 552.448
margin_bottom = 1404.08
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="formule/inscription" to="." method="_on_inscription_pressed"]
[connection signal="pressed" from="formule/connexion" to="." method="_on_connexion_pressed"]
[connection signal="pressed" from="formule/retour" to="." method="_on_retour_pressed"]
[connection signal="pressed" from="error/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="success/retour_success" to="." method="_on_retour_success_pressed"]
